baml_language/crates/baml_tests/snapshots/baml_src/llm_live_smoke.snap
---
source: crates/baml_tests/tests/baml_src.rs
---
function llm_live_smoke.$init_test_ns_llm_live_smoke_live_smoke(registry: testing.TestCollector) -> null {
    call testing.Sequential
    store_var _4
    load_var registry
    load_const "root.llm_live_smoke"
    load_const "live"
    make_closure .<lambda($init_test_ns_llm_live_smoke_live_smoke, 0)>, 0
    load_var _4
    call testing.TestCollector.register_test_set_at
    pop 1
    load_const null
    return
}

function llm_live_smoke.LiveSmokeAnthropic(question: string, client: ai.Client | null) -> string {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_type string
    load_const <omitted>
    load_var client
    load_const <omitted>
    load_const <omitted>
    call ai.Agent.new
    store_var _5
    load_var question
    call user.llm_live_smoke.LiveSmokeAnthropic$spec
    store_var _7
    load_var2 4 5
    load_type ai.Runner<string, Error = ai.errors.Failure | baml.errors.UnknownError, Output = ai.RunResult<string>>
    load_const "run"
    virtual_call nargs=2 ntypeargs=0
    store_var _4
    load_var _4
    load_field .value
    return
}

function llm_live_smoke.LiveSmokeAnthropic$parse(json: string) -> string {
    load_type string
    load_var json
    call baml.sap.parse
    return
}

function llm_live_smoke.LiveSmokeAnthropic$render_prompt(question: string) -> ai.Prompt {
    load_var question
    call user.llm_live_smoke.LiveSmokeAnthropic$spec
    store_var _2
    load_type string
    call ai.wire.render_output_format
    store_var _3
    load_type string
    load_var2 2 3
    call ai.FunctionSpec.prompt
    return
}

function llm_live_smoke.LiveSmokeAnthropic$spec(question: string) -> ai.FunctionSpec<string> {
    load_var ?1
    make_cell
    store_var ?1
    load_type ai.tools.Tool
    alloc_array 0
    call ai.tools.Toolbox.new
    store_var _4
    load_const "claude-haiku-4-5"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call anthropic.AnthropicClient.new
    store_var _6
    load_const "LiveSmokeAnthropic"
    load_deref ?1
    load_const "question"
    load_type string
    load_type unknown
    alloc_map 1
    load_var question
    make_closure .<lambda(LiveSmokeAnthropic$spec, 0)>, 1
    load_var2 2 3
    load_type string
    init_instance<1> ai.FunctionSpec .spec_name, .args, .prompt_template, .toolbox, .default_client
    return
}

function llm_live_smoke.LiveSmokeAnthropic$stream(question: string, client: ai.stream.StreamingClient | null) -> ai.stream.Stream<string | null, string> {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var question
    call user.llm_live_smoke.LiveSmokeAnthropic$spec
    store_var _4
    load_type string | null
    load_type string
    load_var2 3 2
    call ai.stream.from_spec
    return
}

function llm_live_smoke.LiveSmokeGoogle(question: string, client: ai.Client | null) -> string {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_type string
    load_const <omitted>
    load_var client
    load_const <omitted>
    load_const <omitted>
    call ai.Agent.new
    store_var _5
    load_var question
    call user.llm_live_smoke.LiveSmokeGoogle$spec
    store_var _7
    load_var2 4 5
    load_type ai.Runner<string, Error = ai.errors.Failure | baml.errors.UnknownError, Output = ai.RunResult<string>>
    load_const "run"
    virtual_call nargs=2 ntypeargs=0
    store_var _4
    load_var _4
    load_field .value
    return
}

function llm_live_smoke.LiveSmokeGoogle$parse(json: string) -> string {
    load_type string
    load_var json
    call baml.sap.parse
    return
}

function llm_live_smoke.LiveSmokeGoogle$render_prompt(question: string) -> ai.Prompt {
    load_var question
    call user.llm_live_smoke.LiveSmokeGoogle$spec
    store_var _2
    load_type string
    call ai.wire.render_output_format
    store_var _3
    load_type string
    load_var2 2 3
    call ai.FunctionSpec.prompt
    return
}

function llm_live_smoke.LiveSmokeGoogle$spec(question: string) -> ai.FunctionSpec<string> {
    load_var ?1
    make_cell
    store_var ?1
    load_type ai.tools.Tool
    alloc_array 0
    call ai.tools.Toolbox.new
    store_var _4
    load_const "gemini-2.5-flash"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call google.GoogleClient.new
    store_var _6
    load_const "LiveSmokeGoogle"
    load_deref ?1
    load_const "question"
    load_type string
    load_type unknown
    alloc_map 1
    load_var question
    make_closure .<lambda(LiveSmokeGoogle$spec, 0)>, 1
    load_var2 2 3
    load_type string
    init_instance<1> ai.FunctionSpec .spec_name, .args, .prompt_template, .toolbox, .default_client
    return
}

function llm_live_smoke.LiveSmokeGoogle$stream(question: string, client: ai.stream.StreamingClient | null) -> ai.stream.Stream<string | null, string> {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var question
    call user.llm_live_smoke.LiveSmokeGoogle$spec
    store_var _4
    load_type string | null
    load_type string
    load_var2 3 2
    call ai.stream.from_spec
    return
}

function llm_live_smoke.LiveSmokeOpenAi(question: string, client: ai.Client | null) -> string {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_type string
    load_const <omitted>
    load_var client
    load_const <omitted>
    load_const <omitted>
    call ai.Agent.new
    store_var _5
    load_var question
    call user.llm_live_smoke.LiveSmokeOpenAi$spec
    store_var _7
    load_var2 4 5
    load_type ai.Runner<string, Error = ai.errors.Failure | baml.errors.UnknownError, Output = ai.RunResult<string>>
    load_const "run"
    virtual_call nargs=2 ntypeargs=0
    store_var _4
    load_var _4
    load_field .value
    return
}

function llm_live_smoke.LiveSmokeOpenAi$parse(json: string) -> string {
    load_type string
    load_var json
    call baml.sap.parse
    return
}

function llm_live_smoke.LiveSmokeOpenAi$render_prompt(question: string) -> ai.Prompt {
    load_var question
    call user.llm_live_smoke.LiveSmokeOpenAi$spec
    store_var _2
    load_type string
    call ai.wire.render_output_format
    store_var _3
    load_type string
    load_var2 2 3
    call ai.FunctionSpec.prompt
    return
}

function llm_live_smoke.LiveSmokeOpenAi$spec(question: string) -> ai.FunctionSpec<string> {
    load_var ?1
    make_cell
    store_var ?1
    load_type ai.tools.Tool
    alloc_array 0
    call ai.tools.Toolbox.new
    store_var _4
    load_const "gpt-4o-mini"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call openai.ResponsesClient.new
    store_var _6
    load_const "LiveSmokeOpenAi"
    load_deref ?1
    load_const "question"
    load_type string
    load_type unknown
    alloc_map 1
    load_var question
    make_closure .<lambda(LiveSmokeOpenAi$spec, 0)>, 1
    load_var2 2 3
    load_type string
    init_instance<1> ai.FunctionSpec .spec_name, .args, .prompt_template, .toolbox, .default_client
    return
}

function llm_live_smoke.LiveSmokeOpenAi$stream(question: string, client: ai.stream.StreamingClient | null) -> ai.stream.Stream<string | null, string> {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var question
    call user.llm_live_smoke.LiveSmokeOpenAi$spec
    store_var _4
    load_type string | null
    load_type string
    load_var2 3 2
    call ai.stream.from_spec
    return
}

function llm_live_smoke.live_anthropic_answers() -> bool {
    load_const "Say pong."
    load_const <omitted>
    call user.llm_live_smoke.LiveSmokeAnthropic
    call baml.String.trim
    call baml.String.length
    load_const 0
    cmp_int_op >
    return
}

function llm_live_smoke.live_google_answers() -> bool {
    load_const "Say pong."
    load_const <omitted>
    call user.llm_live_smoke.LiveSmokeGoogle
    call baml.String.trim
    call baml.String.length
    load_const 0
    cmp_int_op >
    return
}

function llm_live_smoke.live_openai_answers() -> bool {
    load_const "Say pong."
    load_const <omitted>
    call user.llm_live_smoke.LiveSmokeOpenAi
    call baml.String.trim
    call baml.String.length
    load_const 0
    cmp_int_op >
    return
}
