baml_language/crates/baml_tests/snapshots/baml_src/llm_mock.snap
---
source: crates/baml_tests/tests/baml_src.rs
---
function llm_mock.$init_test_ns_llm_mock_example_openai_client(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "root.llm_mock"
    load_const "example_openai_non_streaming"
    make_closure .<lambda($init_test_ns_llm_mock_example_openai_client, 0)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_var registry
    load_const "root.llm_mock"
    load_const "example_openai_streaming"
    make_closure .<lambda($init_test_ns_llm_mock_example_openai_client, 1)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_const null
    return
}

function llm_mock.$init_test_ns_llm_mock_mock_provider(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "root.llm_mock"
    load_const "mock_json_captures_request"
    make_closure .<lambda($init_test_ns_llm_mock_mock_provider, 0)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_var registry
    load_const "root.llm_mock"
    load_const "mock_json_replays_in_order"
    make_closure .<lambda($init_test_ns_llm_mock_mock_provider, 1)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_var registry
    load_const "root.llm_mock"
    load_const "mock_json_serves_error_status"
    make_closure .<lambda($init_test_ns_llm_mock_mock_provider, 2)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_var registry
    load_const "root.llm_mock"
    load_const "mock_sse_streams_events"
    make_closure .<lambda($init_test_ns_llm_mock_mock_provider, 3)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_var registry
    load_const "root.llm_mock"
    load_const "mock_sse_events_roundtrip"
    make_closure .<lambda($init_test_ns_llm_mock_mock_provider, 4)>, 0
    load_const null
    call testing.TestCollector.register_test_at
    pop 1
    load_const null
    return
}

function llm_mock.MockEcho(question: string, client: ai.Client | null) -> string {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_type string
    load_const <omitted>
    load_var client
    load_const <omitted>
    load_const <omitted>
    call ai.Agent.new
    store_var _5
    load_var question
    call user.llm_mock.MockEcho$spec
    store_var _7
    load_var2 4 5
    load_type ai.Runner<string, Error = baml.errors.UnknownError | ai.errors.Failure, Output = ai.RunResult<string>>
    load_const "run"
    virtual_call nargs=2 ntypeargs=0
    store_var _4
    load_var _4
    load_field .value
    return
}

function llm_mock.MockEcho$parse(json: string) -> string {
    load_type string
    load_var json
    call baml.sap.parse
    return
}

function llm_mock.MockEcho$render_prompt(question: string) -> ai.Prompt {
    load_var question
    call user.llm_mock.MockEcho$spec
    store_var _2
    load_type string
    call ai.wire.render_output_format
    store_var _3
    load_type string
    load_var2 2 3
    call ai.FunctionSpec.prompt
    return
}

function llm_mock.MockEcho$spec(question: string) -> ai.FunctionSpec<string> {
    load_var ?1
    make_cell
    store_var ?1
    load_type ai.tools.Tool
    alloc_array 0
    call ai.tools.Toolbox.new
    store_var _4
    load_const "gpt-4o-mini"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call openai.ResponsesClient.new
    store_var _6
    load_const "MockEcho"
    load_deref ?1
    load_const "question"
    load_type string
    load_type unknown
    alloc_map 1
    load_var question
    make_closure .<lambda(MockEcho$spec, 0)>, 1
    load_var2 2 3
    load_type string
    init_instance<1> ai.FunctionSpec .spec_name, .args, .prompt_template, .toolbox, .default_client
    return
}

function llm_mock.MockEcho$stream(question: string, client: ai.stream.StreamingClient | null) -> ai.stream.Stream<string | null, string> {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var question
    call user.llm_mock.MockEcho$spec
    store_var _4
    load_type string | null
    load_type string
    load_var2 3 2
    call ai.stream.from_spec
    return
}

function llm_mock.MockJsonServer.base_url(self: llm_mock.MockJsonServer) -> string {
    load_const "http://"
    load_var self
    load_field .server
    load_field .addr
    bin_op +
    return
}

function llm_mock.MockJsonServer.handle(self: llm_mock.MockJsonServer, req: baml.http.Request) -> baml.http.Response {
    load_type llm_mock.MockRequest
    load_var self
    load_field .requests
    load_var req
    load_field .method
    load_var req
    load_field .url
    load_var req
    load_field .headers
    load_var req
    load_field .body
    init_instance user.llm_mock.MockRequest .method, .url, .headers, .body
    call baml.Array.push
    pop 1
    load_var self
    load_field .requests
    container_len
    store_var _12
    load_var _12
    load_const 1
    sub_int
    store_var taken
    load_var self
    load_field .responses
    container_len
    store_var _17
    load_var2 3 6
    cmp_int_op <
    pop_jump_if_false L0
    jump L1

  L0:
    load_var self
    load_field .responses
    container_len
    store_var _19
    load_var _19
    load_const 1
    sub_int
    store_var idx
    jump L2

  L1:
    load_var taken
    store_var idx

  L2:
    load_type llm_mock.MockResponse
    load_var self
    load_field .responses
    load_var idx
    call baml.Array.at
    store_var _25
    load_var _25
    narrow_bind llm_mock.MockResponse, slot=8
    pop_jump_if_false L3
    jump L4

  L3:
    load_const "{\"error\":{\"message\":\"mock_json_serve: no canned response configured\"}}"
    call baml.String.to_utf8
    store_var _33
    load_const 500
    load_const "application/json"
    load_const "content-type"
    load_type string
    load_type string
    alloc_map 1
    load_var _33
    sys_op baml.http.Response.new
    jump L5

  L4:
    load_var _25
    store_var canned
    load_var canned
    load_field .status
    store_var _27
    load_const "application/json"
    load_var canned
    load_field .headers
    call user.llm_mock._merged_headers
    store_var _28
    load_var canned
    load_field .body
    call baml.String.to_utf8
    store_var _30
    load_var2 10 11
    load_var _30
    sys_op baml.http.Response.new

  L5:
    return
}

function llm_mock.MockJsonServer.last_request(self: llm_mock.MockJsonServer) -> llm_mock.MockRequest {
    load_var self
    load_field .requests
    store_var _3
    load_var self
    load_field .requests
    container_len
    store_var _5
    load_type llm_mock.MockRequest
    load_var2 3 4
    load_const 1
    sub_int
    call baml.Array.at
    store_var _2
    load_var2 2 2
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_const "mock_json_serve: no request was captured"
    call baml.sys.panic

  L0:
    return
}

function llm_mock.MockJsonServer.request_count(self: llm_mock.MockJsonServer) -> int {
    load_var self
    load_field .requests
    container_len
    return
}

function llm_mock.MockRequest.header(self: llm_mock.MockRequest, name: string) -> string | null {
    load_var self
    load_field .headers
    store_var _3
    load_var name
    call baml.String.to_lower_case
    store_var _4
    load_type string
    load_type string
    load_var2 3 4
    call baml.Map.get
    return
}

function llm_mock.MockRequest.json(self: llm_mock.MockRequest) -> baml.json.json {
    load_var self
    load_field .body
    call baml.json.parse
    return
}

function llm_mock.MockRequest.path(self: llm_mock.MockRequest) -> string {
    load_var self
    load_field .url
    load_const "?"
    call baml.String.split
    store_var _3
    load_type string
    load_var _3
    load_const 0
    call baml.Array.at
    store_var _2
    load_var _2
    store_var _0
    load_var _2
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_var self
    load_field .url
    store_var _0

  L0:
    load_var _0
    return
}

function llm_mock.MockRequest.query(self: llm_mock.MockRequest) -> string | null {
    load_var self
    load_field .url
    load_const "?"
    call baml.String.split
    store_var _2
    load_type string
    load_var _2
    load_const 1
    call baml.Array.at
    return
}

function llm_mock.MockResponse.error(status: int, body: string) -> llm_mock.MockResponse {
    load_var2 1 2
    load_type string
    load_type string
    alloc_map 0
    init_instance user.llm_mock.MockResponse .status, .body, .headers
    return
}

function llm_mock.MockResponse.ok(body: string) -> llm_mock.MockResponse {
    load_const 200
    load_var body
    load_type string
    load_type string
    alloc_map 0
    init_instance user.llm_mock.MockResponse .status, .body, .headers
    return
}

function llm_mock.MockResponse.with_headers(status: int, body: string, headers: map<string, string>) -> llm_mock.MockResponse {
    load_var2 1 2
    load_var headers
    init_instance user.llm_mock.MockResponse .status, .body, .headers
    return
}

function llm_mock.MockSseServer.base_url(self: llm_mock.MockSseServer) -> string {
    load_const "http://"
    load_var self
    load_field .server
    load_field .addr
    bin_op +
    return
}

function llm_mock.MockSseServer.handle(self: llm_mock.MockSseServer, req: baml.http.Request) -> baml.http.Response {
    load_var ?3
    make_cell
    store_var ?3
    load_var ?4
    make_cell
    store_var ?4
    load_var ?5
    make_cell
    store_var ?5
    load_type llm_mock.MockRequest
    load_var self
    load_field .requests
    load_var req
    load_field .method
    load_var req
    load_field .url
    load_var req
    load_field .headers
    load_var req
    load_field .body
    init_instance user.llm_mock.MockRequest .method, .url, .headers, .body
    call baml.Array.push
    pop 1
    load_const 200
    load_const "text/event-stream"
    load_const "content-type"
    load_type string
    load_type string
    alloc_map 1
    sys_op baml.http.Response.new_streaming
    store_deref ?3
    load_var self
    load_field .events
    store_deref ?4
    load_var self
    load_field .chunk_delay
    store_deref ?5
    load_var2 4 3
    load_var delay
    make_closure .<lambda(MockSseServer.handle, 0)>, 3
    load_const null
    load_const null
    load_type null
    load_type baml.errors.Io
    spawn
    pop 1
    load_deref ?3
    return
}

function llm_mock.MockSseServer.last_request(self: llm_mock.MockSseServer) -> llm_mock.MockRequest {
    load_var self
    load_field .requests
    store_var _3
    load_var self
    load_field .requests
    container_len
    store_var _5
    load_type llm_mock.MockRequest
    load_var2 3 4
    load_const 1
    sub_int
    call baml.Array.at
    store_var _2
    load_var2 2 2
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_const "mock_sse_serve: no request was captured"
    call baml.sys.panic

  L0:
    return
}

function llm_mock.MockSseServer.request_count(self: llm_mock.MockSseServer) -> int {
    load_var self
    load_field .requests
    container_len
    return
}

function llm_mock._merged_headers(content_type: string, extra: map<string, string>) -> map<string, string> {
    load_var content_type
    load_const "content-type"
    load_type string
    load_type string
    alloc_map 1
    store_var out
    load_type string
    load_type string
    load_var extra
    call baml.Map.keys
    load_type baml.iter.Iterable<Error = never, Item = string>
    load_const "iter"
    virtual_call nargs=1 ntypeargs=0
    store_var _7

  L0:
    load_var _7
    load_type baml.iter.Iterator<Error = never, Item = string>
    load_const "next"
    virtual_call nargs=1 ntypeargs=0
    store_var _8
    load_var _8
    is_type baml.iter.Done
    pop_jump_if_false L1
    jump L3

  L1:
    load_var _8
    store_var k
    load_type string
    load_type string
    load_var2 2 6
    call baml.Map.get
    store_var _15
    load_var _15
    store_var _14
    load_var _15
    load_const null
    cmp_op ==
    pop_jump_if_false L2
    load_const ""
    store_var _14

  L2:
    load_type string
    load_type string
    load_var2 3 6
    load_var _14
    call baml.Map.set
    pop 1
    jump L0

  L3:
    load_var out
    return
}

function llm_mock.example_openai_non_streaming() -> string {
    load_const "{\"status\":\"completed\",\"output\":[{\"type\":\"message\",\"content\":[{\"type\":\"output_text\",\"text\":\"pong\"}]}],\"usage\":{\"input_tokens\":3,\"output_tokens\":1}}"
    call user.llm_mock.MockResponse.ok
    store_var _3
    load_type string
    load_type baml.errors.InvalidArgument | baml.errors.UnknownError | baml.json.JsonParseError | baml.json.JsonPathError | ai.errors.Failure
    load_var _3
    load_type llm_mock.MockResponse
    alloc_array 1
    make_closure .<lambda(example_openai_non_streaming, 0)>, 0
    call user.llm_mock.mock_json_serve
    return
}

function llm_mock.example_openai_streaming() -> string {
    load_const "{\"type\":\"response.output_text.delta\",\"delta\":\"po\"}"
    call user.llm_mock.sse_data
    store_var _3
    load_const "{\"type\":\"response.output_text.delta\",\"delta\":\"ng\"}"
    call user.llm_mock.sse_data
    store_var _4
    load_const "{\"type\":\"response.completed\",\"response\":{\"status\":\"completed\",\"output\":[{\"type\":\"message\",\"content\":[{\"type\":\"output_text\",\"text\":\"pong\"}]}],\"usage\":{\"input_tokens\":3,\"output_tokens\":1}}}"
    call user.llm_mock.sse_data
    store_var _5
    load_type string
    load_type unknown
    load_var2 1 2
    load_var _5
    load_type string
    alloc_array 3
    make_closure .<lambda(example_openai_streaming, 0)>, 0
    load_const <omitted>
    call user.llm_mock.mock_sse_serve
    return
}

function llm_mock.mock_json_captures_request() -> string {
    load_const "{\"ok\":true}"
    call user.llm_mock.MockResponse.ok
    store_var _2
    load_type string
    load_type baml.errors.Io | baml.errors.Timeout | baml.json.JsonParseError | baml.json.JsonPathError
    load_var _2
    load_type llm_mock.MockResponse
    alloc_array 1
    make_closure .<lambda(mock_json_captures_request, 0)>, 0
    call user.llm_mock.mock_json_serve
    return
}

function llm_mock.mock_json_replays_in_order() -> string {
    load_const "{\"n\":1}"
    call user.llm_mock.MockResponse.ok
    store_var _2
    load_const "{\"n\":2}"
    call user.llm_mock.MockResponse.ok
    store_var _3
    load_type string
    load_type baml.errors.Io | baml.errors.Timeout
    load_var2 1 2
    load_type llm_mock.MockResponse
    alloc_array 2
    make_closure .<lambda(mock_json_replays_in_order, 0)>, 0
    call user.llm_mock.mock_json_serve
    return
}

function llm_mock.mock_json_serve(responses: llm_mock.MockResponse[], body: (llm_mock.MockJsonServer) -> #0 throws #1) -> #0 {
    load_var ?4
    make_cell
    store_var ?4
    load_const "127.0.0.1:0"
    sys_op baml.http.Server.bind
    store_var _4
    load_var2 5 1
    load_type llm_mock.MockRequest
    alloc_array 0
    init_instance user.llm_mock.MockJsonServer .server, .responses, .requests
    store_deref ?4
    load_type #0
    load_type #1
    load_var mock
    make_closure .<lambda(mock_json_serve, 0)>, captures=1, ntypeargs=2
    load_const null
    load_const null
    load_type never
    load_type baml.errors.Io
    spawn
    store_var _8
    load_var _8
    store_var task
    load_deref ?4
    load_var body
    call_indirect
    store_var _0
    jump L0
    load_var task
    call baml.future.Future.cancel
    pop 1
    load_var _9
    rethrow

  L0:
    load_var task
    call baml.future.Future.cancel
    pop 1
    load_var _0
    return
}

function llm_mock.mock_json_serves_error_status() -> int {
    load_const 429
    load_const "{\"error\":{\"message\":\"slow down\"}}"
    call user.llm_mock.MockResponse.error
    store_var _2
    load_type int
    load_type baml.errors.Io | baml.errors.Timeout
    load_var _2
    load_type llm_mock.MockResponse
    alloc_array 1
    make_closure .<lambda(mock_json_serves_error_status, 0)>, 0
    call user.llm_mock.mock_json_serve
    return
}

function llm_mock.mock_sse_events_roundtrip() -> string {
    load_const "event: a\ndata: 1\n\nevent: b\ndata: 2\n\n"
    call user.llm_mock.sse_events
    store_var _2
    load_type string
    load_var _2
    load_const " / "
    call baml.Array.join
    return
}

function llm_mock.mock_sse_serve(events: string[], body: (llm_mock.MockSseServer) -> #0 throws #1, chunk_delay_ms: int) -> #0 {
    load_var ?5
    make_cell
    store_var ?5
    load_var chunk_delay_ms
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var chunk_delay_ms

  L0:
    load_const "127.0.0.1:0"
    sys_op baml.http.Server.bind
    store_var _6
    load_var chunk_delay_ms
    call baml.time.Duration.from_milliseconds
    store_var _7
    load_var2 6 1
    load_var _7
    load_type llm_mock.MockRequest
    alloc_array 0
    init_instance user.llm_mock.MockSseServer .server, .events, .chunk_delay, .requests
    store_deref ?5
    load_type #0
    load_type #1
    load_var mock
    make_closure .<lambda(mock_sse_serve, 0)>, captures=1, ntypeargs=2
    load_const null
    load_const null
    load_type never
    load_type baml.errors.Io
    spawn
    store_var _11
    load_var _11
    store_var task
    load_deref ?5
    load_var body
    call_indirect
    store_var _0
    jump L1
    load_var task
    call baml.future.Future.cancel
    pop 1
    load_var _12
    rethrow

  L1:
    load_var task
    call baml.future.Future.cancel
    pop 1
    load_var _0
    return
}

function llm_mock.mock_sse_streams_events() -> string {
    load_const "message_start"
    load_const "{\"type\":\"message_start\"}"
    call user.llm_mock.sse_event
    store_var _2
    load_const "{\"type\":\"response.output_text.delta\",\"delta\":\"hi\"}"
    call user.llm_mock.sse_data
    store_var _3
    load_type string
    load_type baml.errors.Io | baml.errors.Timeout
    load_var2 1 2
    load_type string
    alloc_array 2
    make_closure .<lambda(mock_sse_streams_events, 0)>, 0
    load_const <omitted>
    call user.llm_mock.mock_sse_serve
    return
}

function llm_mock.sse_data(data: string) -> string {
    load_const "data: "
    load_var data
    bin_op +
    return
}

function llm_mock.sse_event(name: string, data: string) -> string {
    load_const "event: "
    load_var name
    bin_op +
    load_const "\ndata: "
    bin_op +
    load_var data
    bin_op +
    return
}

function llm_mock.sse_events(body: string) -> string[] {
    load_var body
    load_const "\n\n"
    call baml.String.split
    store_var _2
    load_type string
    load_type never
    load_var _2
    make_closure .<lambda(sse_events, 0)>, 0
    call baml.Array.filter
    return
}
